--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,97 @@
-.App {
-  text-align: center;
+h4{
+  margin: 0;
+}
+h3{
+  margin: 0;
+}
+a, a:hover{
+  color: black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#container{
+  width: 100%;
+  padding-left: 18%;
+  padding-right: 18%;
+  padding-bottom: 5%;
+  margin-top: 1rem;
+  transition: transform ease-out .2s;
+}@media (max-width: 1000px){
+  #container{
+    padding: 0 10%;
+  }  
+}@media (max-width: 820px){
+  #container{
+    padding: 0 3%;
+  }  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+div.divider{
+  background-color: #dee2e6;
+  width: 100%;
+  height: 1px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+div.v-divider{
+  background-color: #dee2e6;
+  width: 1px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+a{
+  text-decoration: none;
+}
+
+body::-webkit-scrollbar{
+  width: 12px;
+}
+body::-webkit-scrollbar-track{
+  background-color: whitesmoke;
+}
+body::-webkit-scrollbar-thumb{
+  background-color: #B32222;
+  border-radius: 20px;
+  border: 3px solid whitesmoke;
+}
+
+pre{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  word-wrap: break-word;
+}
+.topic-preview:not(:last-child){
+  border-bottom: 1px solid #dee2e6;
+}
+
+.category:not(:last-child){
+  border-bottom: 1px solid #dee2e6;
+}
+.category{
+  height: 120px;
+  transition: background-color ease-out .1s;
+}
+.category:hover{
+  background-color: whitesmoke;
+}
+
+.section_title{
   display: flex;
-  flex-direction: column;
+  background-color: #B32222;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  border: 1px solid #831a1a;
   color: white;
+  padding: .5rem;
+  border-top-left-radius: .3rem;
+  border-top-right-radius: .3rem;
+}
+.section_content{
+  border: 1px solid #dee2e6;
+  border-radius: 0 0 .2rem .2rem;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dropdown-item:active{
+  background-color: #cc3535!important;
 }
